# vkrelay

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  NOTICE  README.md  ROADMAP.md
vkrelay2/: CMakeLists.txt  CMakePresets.json  README.md
vkrelay2/common/argv/: argv_split.cpp  argv_split.hpp  command_line.cpp  command_line.hpp
vkrelay2/common/control/: control_service.cpp  control_service.hpp  daemon_endpoint.cpp  daemon_endpoint.hpp
vkrelay2/common/display/: display_layout.cpp  display_layout.hpp
vkrelay2/common/launch/: launch_cli.cpp  launch_cli.hpp  main.cpp
vkrelay2/common/logging/: logging.cpp  logging.hpp
vkrelay2/common/process/: line_queue.hpp  process.cpp  process.hpp  process_posix.cpp  process_win.cpp
vkrelay2/common/protocol/: gpu.cpp  gpu.hpp  ids.cpp  ids.hpp  launch_descriptor.cpp  launch_descriptor.hpp  messages.cpp  messages.hpp  smoke_matrix.cpp  smoke_matrix.hpp  wire.cpp  wire.hpp  worker_lifecycle.cpp  worker_lifecycle.hpp
vkrelay2/common/sidecar/: chrome_recapture.hpp  input_queue.hpp  popup_classify.h  popup_lifecycle.hpp  sidecar_session.cpp  sidecar_session.hpp  window_placement.hpp  window_registry.hpp
vkrelay2/common/transport/: tcp.cpp  tcp.hpp  transport.cpp  transport.hpp
vkrelay2/common/util/: json.cpp  json.hpp
vkrelay2/common/vkrpc/: device_loss_policy.h  feature_bits.h  indirect_draw_validation.h  pipeline_specialization_validation.h  rpc.cpp  rpc.hpp  rpc_profile.h  vulkan_session.cpp  vulkan_session.hpp
vkrelay2/linux/canary/: canary.cpp  caps_canary.cpp  compute_canary.cpp  cube_canary.cpp  frame_transition_canary.cpp  mrt_canary.cpp  readback_canary.cpp  readback_order_canary.cpp  tessgeom_canary.cpp  triangle_canary.cpp  ubo_canary.cpp  vbo_canary.cpp  vertex_divisor_canary.cpp  vk13_bda_canary.cpp  vk13_di_canary.cpp  vk13_dynrender_canary.cpp  vk13_eds_canary.cpp  vk13_finale_canary.cpp  vk13_hostquery_canary.cpp  vk13_multiview_canary.cpp  vk13_required_audit_canary.cpp  vk13_sync2_canary.cpp  vk_event_canary.cpp
vkrelay2/linux/icd/: icd.cpp  icd_caps_cache.h  icd_memory.h  icd_softdirty.h  icd_subset.h  icd_version_policy.h
vkrelay2/linux/launcher/: gate.sh  lib_private_session.sh  render_catalog.sh  run_bigroot_smoke.sh  run_bringup_smoke.sh  run_canary.sh  run_caps_smoke.sh  run_chrome_smoke.sh  run_clamp_smoke.sh  run_compute_smoke.sh  run_cube.sh  run_cursor_smoke.sh  run_daemon_autostart_smoke.sh  run_feedback_smoke.sh  run_frame_transition_smoke.sh  run_fullscreen_smoke.sh  run_geometry_smoke.sh  run_gl_apps_smoke.sh  run_iconify_smoke.sh  run_input_smoke.sh  run_lifecycle_smoke.sh  run_mrt_smoke.sh  run_placement_smoke.sh  run_popup_smoke.sh  run_profile_matrix.sh  run_profile_smoke.sh  run_readback_smoke.sh  run_recapture_smoke.sh  run_resize_smoke.sh  run_rotate_smoke.sh  run_sidecar_smoke.sh  run_tessgeom_smoke.sh  run_triangle.sh  run_ubo.sh  run_vbo.sh  run_vertex_divisor_smoke.sh  run_vk13_bda_smoke.sh  run_vk13_di_smoke.sh  run_vk13_dynrender_smoke.sh  run_vk13_eds_smoke.sh  (+8 more)
vkrelay2/linux/observe/: capture_main.cpp  png_write.h
vkrelay2/linux/sidecar/: bigroot_canary.cpp  canary_hints.h  chrome_canary.cpp  chrome_query.cpp  clamp_canary.cpp  configure_probe.cpp  cursor_canary.cpp  cursor_query.cpp  feedback_canary.cpp  fullscreen_canary.cpp  geometry_canary.cpp  geometry_query.cpp  input_canary.cpp  lifecycle_canary.cpp  placement_canary.cpp  popup_canary.cpp  popup_query.cpp  resize_canary.cpp  rotate_canary.cpp  sidecar_main.cpp
vkrelay2/scripts/dev/: capture_window.ps1  package_release.sh  profile_report.sh  raw_to_png.ps1  rebuild_all.sh  run_resize_shot.ps1  run_vk_cts.sh  run_zorder_shot.ps1
vkrelay2/scripts/packaging/: INSTALL.md  install.sh  remove_windows_payload.sh  windows_cache_root.sh
vkrelay2/src_ext/xwayland/: UPSTREAM.md  build_private_xwayland.sh  sha256sums.txt
vkrelay2/tests/: CMakeLists.txt  bda_spv.h  compute_spv.h  cube_geometry.h  cube_spv.h  di_spv.h  iub_spv.h  multiview_spv.h  real_backend_test_utils.hpp  specialization_compute_spv.h  specialization_frag_spv.h  specialization_vert_spv.h  test_assert.hpp  texture_spv.h  triangle_spv.h  ubo_spv.h  vbo_spv.h
vkrelay2/tests/canaries/: argv_echo_main.cpp  argv_verify_main.cpp  byte_emitter_main.cpp
vkrelay2/tests/fuzz/: fuzz_vkrpc.cpp  fuzz_wire.cpp
vkrelay2/tests/integration/: integration_app_session.cpp  integration_argv_echo.cpp  integration_daemon_endpoint.cpp  integration_display_probe.cpp  integration_display_snapshot.cpp  integration_gpu_probe.cpp  integration_handshake.cpp  integration_process_teardown.cpp  integration_real_acquire_abort.cpp  integration_real_backend.cpp  integration_real_bda.cpp  integration_real_compute.cpp  integration_real_cube.cpp  integration_real_depth.cpp  integration_real_depth_upload.cpp  integration_real_di.cpp  integration_real_draw.cpp  integration_real_events.cpp  integration_real_extent.cpp  integration_real_indirect.cpp  integration_real_sync2.cpp  integration_real_texture.cpp  integration_real_ubo.cpp  integration_real_vbo.cpp  integration_serve_deadline.cpp  integration_session_backend_gate.cpp  integration_sidecar_plane.cpp  integration_supervisor_worker.cpp  integration_transport_peerclose.cpp  integration_vulkan_real.cpp  integration_vulkan_rpc.cpp  integration_worker_kill.cpp  integration_worker_teardown.cpp  native_vertex_tail_probe.cpp
vkrelay2/tests/smoke/: argv_echo_bash.sh  argv_echo_powershell.ps1  gl_frontend_env_bash.sh  launch_teardown_bash.sh  matrix.json  package_windows_cache_bash.sh  run_byte_exact_bash.sh  session_close_cleanup_bash.sh  x11_namespace_identity_bash.sh  xwayland_selection_bash.sh
vkrelay2/tests/unit/: unit_acquire_poll.cpp  unit_command_line.cpp  unit_daemon_endpoint.cpp  unit_display_layout.cpp  unit_display_probe.cpp  unit_gpu.cpp  unit_icd_memory.cpp  unit_icd_subset.cpp  unit_json.cpp  unit_launch_argv.cpp  unit_launch_descriptor.cpp  unit_messages.cpp  unit_png.cpp  unit_sidecar.cpp  unit_smoke_matrix.cpp  unit_vkrpc.cpp  unit_wire.cpp  unit_worker_lifecycle.cpp
vkrelay2/windows/supervisor/: main.cpp  (+10 more)
(+22 files in other folders)
